samples/_failures_safe/1761170481_e2e09c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a34eda83.c:175:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  175 | int main
      | ^~~
